src/main/java/semantic/symbolTable/test/failing/redefinedStruct.ru
/? RedefinedStructException
struct Hola {}
struct Hola {}
start {}